--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,9 @@ dependencies {
     implementation ("com.github.bumptech.glide:glide:4.11.0@aar") {
         transitive = true
     }
+
+    // Koin for Android
+    def koin_version = "3.2.0"
+
+    implementation "io.insert-koin:koin-android:$koin_version"
 }
